tests/compile-fail/dangling_pointers/deref-invalid-ptr.stderr
error: Undefined Behavior: 0x10 is not a valid pointer
  --> $DIR/deref-invalid-ptr.rs:6:23
   |
LL |     let _y = unsafe { &*x as *const u32 }; //~ ERROR 0x10 is not a valid pointer
   |                       ^^^ 0x10 is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/deref-invalid-ptr.rs:6:23

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

